fix: job error stats should filter jobs by states
(cherry picked from commit 31513a4be6cd671bc0b0df28f3f0486823db29bd)